--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.5'
+version: '3.8'
 
 services:
   base-spring:
@@ -11,6 +11,7 @@ services:
   mongo:
     image: mongo
     restart: always
+    container_name: mongo-db
     ports:
       - "27017:27017"
     volumes:
@@ -20,20 +21,21 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: 12345678
-      MONGO_INITDB_DATABASE: test_mongo
+      MONGO_INITDB_DATABASE: admin
 
   mongo-express:
     image: mongo-express
     restart: always
+    container_name: mongo-express
     ports:
-      - 8081:8081
+      - "8081:8081"
     networks:
       - mongo-network
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: 12345678
       ME_CONFIG_MONGODB_URL: mongodb://root:12345678@mongo:27017/
-      ME_CONFIG_BASICAUTH: false
+      ME_CONFIG_BASICAUTH: "false"
 
 volumes:
   mongo-data:
@@ -41,4 +43,3 @@ volumes:
 networks:
   mongo-network:
     driver: bridge
-
